<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="sitting">Настройки</string>
    <string name="search">Поиск</string>
    <string name="mediaLibrary">Медиатека</string>
    <string name="darkTheme">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="writeToSupport">Написать в поддержку</string>
    <string name="termsOfUse">Пользовательское соглашение</string>
    <string name="share_message">"https://practicum.yandex.ru/profile/android-developer/?from=mobile_landing"</string>
    <string name="message_support_api">Сообщение разработчикам и разработчица приложения PlayList Maker</string>
    <string name="mail_support">zod15ru@gmail.com</string>
    <string name="body_support">Спасибо разрабам за крутое приложение!!!"</string>
    <string name="terms_user_message">https://yandex.ru/legal/practicum_offer/</string>
    <string name="Update_search">Обновить</string>
    <string name="error_no_connect">Проблемы со связью </string>
    <string name="error_no_connect_2">Загрузка не удалась. Проверьте подключение к интернету. </string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="storyrequested_information">Вы искали</string>
    <string name="trackDuration">Длительность</string>
    <string name="albumTrack">Альбом</string>
    <string name="yearOfReleaseOfTheTrack">Год</string>
    <string name="genreTrack">Жанр</string>
    <string name="countryTrek">Страна</string>
    <string name="time_track_message">00:00</string>
    <string name="mediateka">Медиатека</string>
    <string name="uncreated_playlist">Вы не создали </string>
    <string name="uncreated_playlist2">ни одного плейлиста </string>
    <string name="empty_playlist">Ваша медиатека пуста</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="tab_favorite_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name_new_playlist">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="add_playlist">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="description">Description</string>
    <string name="finish_creating_a_playlist">"Завершить создание плейлиста?"</string>
    <string name="any_unsaved_data_will_be_lost">"Все несохраненные данные будут потеряны"</string>
    <string name="finish_create_playlist">"Завершить"</string>
    <string name="undo_create_playlist">"Отмена"</string>
    <string name="tracka_description">"треков"</string>
    <string name="toast_add_track">Трек успешно добавлен в плейлист!</string>
    <string name="the_track_already_exists">Трек уже существует в этом плейлисте.</string>
    <string name="toast_track_error">Трек уже добавлен в плейлист %1$s.</string>
    <string name="toast_added_to_playlist">Добавлено в плейлист %1$s.</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>

    <string name="empty_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">Поделиться плейлистом через</string>


    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="playlist_deleted">Плейлист удалён</string>
    <string name="error_deleting_playlist">Ошибка</string>


    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save_playlist">Сохранить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="permission">Разрешение, необходимое для доступа к медиафайлам</string>
</resources>