<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/indent_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_22" />


    <Button
        android:id="@+id/searchcid"
        style="@style/ActivityMainScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search"
        app:icon="@drawable/search" />


    <Button
        android:id="@+id/mediaLibraryId"
        style="@style/ActivityMainScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indent_16"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/mediaLibrary"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/sittingId"
        style="@style/ActivityMainScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indent_16"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sitting"
        app:icon="@drawable/setting" />

</LinearLayout>