<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lily"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/sittingBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text"
        android:layout_alignBottom="@id/text"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:paddingStart="@dimen/indent"
        android:paddingEnd="@dimen/indent"
        android:src="@drawable/settings_return" />


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@id/sittingBack"
        android:paddingStart="0dp"
        android:paddingEnd="52dp"
        android:text="@string/sitting"
        android:textColor="@color/blackness"
        android:textSize="@dimen/text_size">

    </TextView>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swichDarckTheam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="61dp"
        android:paddingStart="@dimen/indent"
        android:paddingEnd="12dp"
        android:text="@string/darkTheme"
        android:textColor="@color/blackness"
        android:textSize="16sp"
        android:thumbTint="@color/settings_image_color"
        android:trackTint="@color/track_gray">

    </androidx.appcompat.widget.SwitchCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swichDarckTheam"
        android:layout_marginTop="42dp"
        android:clickable="true"
        android:drawableTint="@color/settings_image_color"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/shareApp"
        android:textColor="@color/settings_text_color"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/settings_share" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share"
        android:layout_marginTop="42dp"
        android:clickable="true"
        android:paddingStart="@dimen/indent"
        android:paddingEnd="12dp"
        android:text="@string/shareApp"
        android:textColor="@color/settings_text_color"
        android:textSize="@dimen/text_size_settings"
        app:drawableEndCompat="@drawable/settings_support"

        app:drawableTint="@color/settings_image_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/terms_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_support"
        android:layout_marginTop="42dp"
        android:clickable="true"
        android:drawableTint="@color/settings_image_color"
        android:paddingStart="@dimen/indent"
        android:paddingEnd="12dp"
        android:text="@string/termsOfUse"
        android:textColor="@color/settings_text_color"
        android:textSize="@dimen/text_size_settings"
        app:drawableEndCompat="@drawable/settings_arrow_forward" />

</RelativeLayout>

