<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_revers"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_playlist"
        app:navigationIcon="@drawable/back"
        app:navigationIconTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintBottom_toTopOf="@id/imagePlayList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTintMode="?attr/colorPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        app:buttonGravity="center_vertical"
        app:iconTint="@color/white"
        app:title="@string/new_playlist"
        app:titleMarginStart="@dimen/padding_12"
        app:titleTextColor="?attr/colorOnPrimary">
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imagePlayList"
        android:layout_width="@dimen/_312dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/playlistNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_new_playlist"
        android:layout_marginTop="@dimen/indent_26"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:background="@drawable/layer_create_playlist_image"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameInputLayout"
        android:layout_width="@dimen/_328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginEnd="@dimen/indent_16"
        app:layout_constraintBottom_toTopOf="@id/playlistDescriptionInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePlayList"
        android:hint="@string/name_new_playlist"
        android:textSize="16sp"
        style="@style/CustomOutlineBox"
        app:titleTextColor="?attr/colorOnPrimary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionInputLayout"
        android:layout_width="@dimen/_328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_16"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistNameInputLayout"
        android:hint="@string/playlist_description"
        android:textSize="@dimen/_16sp"
        style="@style/CustomOutlineBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/createButton"
        android:layout_width="@dimen/_326dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="@dimen/_170dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/add_playlist"
        android:textAllCaps="false"
        android:background="@drawable/button_background_selector"
        android:enabled="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>