<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.AudioPlayerFragment"
    >

  <ImageView
      android:id="@+id/image_album"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="@dimen/indent_24"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toTopOf="@+id/album_artist"
      app:layout_constraintEnd_toStartOf="@+id/right_guideline"
      app:layout_constraintStart_toStartOf="@+id/left_guideline"
      app:layout_constraintTop_toBottomOf="@+id/toolbarSearch"
      app:srcCompat="@drawable/placeholder"
      tools:layout_marginTop="@dimen/indent_26"
      />

  <ImageView
      android:id="@+id/playButton"
      android:layout_width="@dimen/play_size"
      android:layout_height="@dimen/play_size"
      android:clickable="true"
      app:layout_constraintBottom_toTopOf="@+id/time_track"
      app:layout_constraintEnd_toStartOf="@+id/right_guideline"
      app:layout_constraintStart_toStartOf="@+id/left_guideline"
      app:srcCompat="@drawable/play_button"
      />

  <ImageView
      android:id="@+id/favoriteMusic"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      app:layout_constraintBottom_toBottomOf="@+id/playButton"
      app:layout_constraintEnd_toStartOf="@+id/right_guideline"
      app:layout_constraintTop_toTopOf="@+id/playButton"
      app:srcCompat="@drawable/favorite_border"
      />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      app:layout_constraintBottom_toBottomOf="@+id/playButton"
      app:layout_constraintStart_toStartOf="@+id/view_artist_name"
      app:layout_constraintTop_toTopOf="@+id/playButton"
      app:srcCompat="@drawable/property_add_list"
      />
  <TextView
      android:id="@+id/track_duration1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/indent_16"
      android:layout_marginTop="@dimen/indent_39"
      android:text="@string/trackDuration"
      app:layout_constraintBottom_toTopOf="@+id/track_album2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
      style="@style/TrackInfo"
      />
  <TextView
      android:id="@+id/track_album2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/albumTrack"
      app:layout_constraintBottom_toTopOf="@+id/track_year3"
      app:layout_constraintStart_toStartOf="@+id/track_duration1"
      app:layout_constraintTop_toBottomOf="@+id/track_duration1"
      style="@style/TrackInfo"

      />
  <TextView
      android:id="@+id/track_year3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/yearOfReleaseOfTheTrack"
      app:layout_constraintBottom_toTopOf="@+id/track_genre4"
      app:layout_constraintStart_toStartOf="@+id/track_album2"
      app:layout_constraintTop_toBottomOf="@+id/track_album2"
      style="@style/TrackInfo"

      />


  <TextView
      android:id="@+id/track_genre4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/genreTrack"
      app:layout_constraintBottom_toTopOf="@+id/track_country5"
      app:layout_constraintStart_toStartOf="@+id/track_year3"
      app:layout_constraintTop_toBottomOf="@+id/track_year3"
      style="@style/TrackInfo"
      />
  <TextView
      android:id="@+id/track_country5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/indent_24"
      android:text="@string/countryTrek"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="@+id/track_genre4"
      app:layout_constraintTop_toBottomOf="@+id/track_genre4"
      style="@style/TrackInfo"

      />
  <TextView
      android:id="@+id/time_track"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:fontFamily="@font/ys_display_medium"
      android:text="@string/time_track_message"
      android:textColor="@color/black_revers"
      android:textSize="14sp"
      app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
      app:layout_constraintEnd_toStartOf="@+id/right_guideline"
      app:layout_constraintStart_toStartOf="@+id/left_guideline"
      />

  <TextView
      android:id="@+id/view_artist_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:ellipsize="end"
      android:fontFamily="@font/ys_display_medium"
      android:maxLines="1"
      android:maxWidth="200dp"
      android:textColor="@color/black_revers"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/album_artist"
      app:layout_constraintTop_toBottomOf="@+id/album_artist"
      tools:text="The Beatles "
      />
  <TextView
      android:id="@+id/album_artist"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="56dp"
      android:ellipsize="end"
      android:fontFamily="@font/ys_display_medium"
      android:maxLines="1"
      android:textColor="@color/black_revers"
      android:textSize="@dimen/text_size_22"
      app:layout_constrainedWidth="true"
      app:layout_constraintBottom_toTopOf="@+id/playButton"
      app:layout_constraintEnd_toStartOf="@+id/right_guideline"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/left_guideline"
      tools:text="Yesterday (Remastered 2009)"
      />

  <TextView
      android:id="@+id/track_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/indent_39"
      app:layout_constraintBaseline_toBaselineOf="@id/track_duration1"
      app:layout_constraintBottom_toTopOf="@+id/album_one_name"
      app:layout_constraintEnd_toEndOf="@+id/album_one_name"
      app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
      tools:text="00:00"
      style="@style/TrackApiInfo"
      />

  <TextView
      android:id="@+id/album_one_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/indent_16"
      android:ellipsize="marquee"
      android:maxLines="1"
      app:layout_constraintBaseline_toBaselineOf="@id/track_album2"
      app:layout_constraintBottom_toTopOf="@+id/track_year"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/guideline4"
      app:layout_constraintTop_toBottomOf="@+id/track_duration"
      app:layout_constraintWidth_default="wrap"
      tools:text="Yesterday (Remastered 2009)"
      style="@style/TrackApiInfo"
      />
  <TextView
      android:id="@+id/track_year"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBaseline_toBaselineOf="@id/track_year3"
      app:layout_constraintBottom_toTopOf="@+id/track_genre"
      app:layout_constraintEnd_toEndOf="@+id/album_one_name"
      app:layout_constraintTop_toBottomOf="@+id/album_one_name"
      tools:text="1965"
      style="@style/TrackApiInfo"
      />

  <TextView
      android:id="@+id/track_genre"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBaseline_toBaselineOf="@id/track_genre4"
      app:layout_constraintBottom_toTopOf="@+id/track_country"
      app:layout_constraintEnd_toEndOf="@+id/track_year"
      app:layout_constraintTop_toBottomOf="@+id/track_year"
      tools:text="Rock"
      style="@style/TrackApiInfo"
      />
  <TextView
      android:id="@+id/track_country"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/indent_24"
      app:layout_constraintBaseline_toBaselineOf="@id/track_country5"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/track_genre"
      app:layout_constraintTop_toBottomOf="@+id/track_genre"
      tools:text="Великобритания"
      style="@style/TrackApiInfo"

      />

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbarSearch"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints"
      >


  </androidx.appcompat.widget.Toolbar>

  <androidx.constraintlayout.widget.Barrier
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:barrierDirection="top"
      app:constraint_referenced_ids="track_album2,album_one_name"

      />
  <androidx.constraintlayout.widget.Group
      android:id="@+id/visibleGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="visible"
      app:constraint_referenced_ids="track_album2,album_one_name"
      />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/left_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.06082725"
      />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/right_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.94160587"
      />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/horizontal_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.7140903"
      />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.50121653"
      />

</androidx.constraintlayout.widget.ConstraintLayout>